# Argus

./: AUTHORS.rst  LICENSE  README.md  pyproject.toml
argus/: __init__.py  __main__.py  app.py  schema.py
argus/classes/: data.py
argus/cli/: start.py
argus/db/: mongo.py
